--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>hello world</h1>
+<h1>P1 Introduction Piyawan Chirayus</h1>
 <a href="http://wikipedia.org">wiki link</a>
 <img src="./images/bike.jpg">
 <p>Why are you taking this course?</p>
+<p>I take this course because I want to be able to create online webpage , a webblog or online store.</p>
 <p>What previous experience do you have with HTML/CSS?</p>
+<p>Very minimum, this is probably my first webpage.</p>
 <p>What previous experience do you have with programming?</p>
+<p>SAS and R a little bit of python.</p>
 <p>Have you worked with PHP before? If so, to what extent?</p>
+<p>No I have not work on PHP before. </p>
 <p>Are you working on a Mac, PC, or some other platform?</p>
+<p> Window 8 </p>
 <p>Anything else we should know?</p>
+<p>I have the most handsome french bulldog</p>
 </body>
 </html>
 
